# amalfiResults

./: .gitignore  README-AWS-DEPLOYMENT.md  README.md  add_missing_column.py  add_prepoll_booths.py  check_db.py  check_prepoll.py  create_nirvana_demo.py  deploy.sh  docker-compose.yml  docker_test.py  drop_results_table.py  fix_database_schema.py  test_admin_endpoint.py  test_candidates.py  test_db_connection.py  test_download.py  test_image_processing.py  test_polling_places.py  wait-for-fastapi.sh
common/: aec_data_downloader.py  booth_results_processor.py  candidate_data_loader.py  db_utils.py  (+1 more)
fastapi_app/: Dockerfile  README.md  main.py  populate_db.py  pyproject.toml  test_electorates.py  test_manual_entry.py
flask_app/: Dockerfile  README.md  app.py  pyproject.toml
flask_app/static/css/: style.css
flask_app/static/js/: dashboard.js  main.js  result_detail.js
flask_app/templates/: admin_panel.html  admin_panel_new.html  admin_polling_places.html  admin_review_result.html  admin_review_result_new.html  admin_tcp_candidates.html  admin_tcp_candidates_new.html  admin_users.html  base.html  booth_results.html  booth_results_new.html  candidates.html  candidates_new.html  electorate_dashboard.html  index.html  login.html  manual_entry.html  polling_places.html  register.html  result_detail.html  result_detail_new.html  results.html  results_new.html
flask_app/templates/includes/: navbar.html
flask_app/tests/: test_admin_polling_places.py  test_admin_upload.py  test_auth.py
flask_app/utils/: __init__.py  aec_data_downloader.py  booth_results_processor.py
(+8 files in other folders)
